Fixing a variety of alignment glitches on mobile; desktop; and other dimentions

--- a/src/static/libraries/layout/NavBar.css
+++ b/src/static/libraries/layout/NavBar.css
@@ -453,6 +453,15 @@ li .emoji {
         margin-right: 1rem;
         margin-top: -5px;
     }
+    .Page-navLink {
+        margin-right: 0.3rem;
+    }
+}
+
+@media (max-width: 1179px) { /* below iPad Air, e.g. iPad Mini  */
+    .Page-navLink {
+        margin-right: 0.3rem;
+    }
 }
 
 @media (max-width: 992px) {
